[tool.poetry]
name = "timey-wimey"
version = "0.1.2"
description = "A simple CLI for generating times"
authors = ["Sam Phinizy <83414895+sam-phinizy@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dateparser = "^1.1.8"
typer = "^0.9.0"
pendulum = "^2.1.2"
tzlocal = "^5.0.1"
sentinel = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
timey-wimey="timey_wimey.main:app"